Added token authorization
